pooling enemies and projectiles and actor class

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ ExportedObj/
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+Unity/Library/metadata/00/00000000000000003000000000000000
+*.info
+*.db
+Unity/Temp/UnityTempFile-68fc56b5ff3718244bc8b2a0303132f5
+Unity/Library/metadata/00/00000000000000004000000000000000
+Unity/Library/metadata/00/00000000000000005000000000000000
+Unity/Library/metadata/00/00000000000000006000000000000000
+Unity/Temp/UnityLockfile
